--- a/leaderboard_1.0/docker/leaderboard/Dockerfile
+++ b/leaderboard_1.0/docker/leaderboard/Dockerfile
@@ -1,6 +1,16 @@
-FROM ubuntu:20.04
+FROM python:3.7
 
 WORKDIR /workspace
+
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends jq \
+    && rm -rf /var/lib/apt/lists/* 
+
+# Install aws cli v2
+RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" \
+    && unzip awscliv2.zip \
+    && ./aws/install \
+    && rm -rf awscliv2.zip
 
 ENV CARLA_PYTHON_API_ROOT "/workspace/CARLA"
 ENV SCENARIO_RUNNER_ROOT "/workspace/scenario_runner"
