Added pivate contents to fluentd

--- a/leaderboard_1.0/config/fluentd.yaml
+++ b/leaderboard_1.0/config/fluentd.yaml
@@ -11,7 +11,7 @@ data:
     <source>
       @type tail
       @id in_tail_container_logs
-      path /var/log/containers/*simulator*.log, /var/log/containers/*agent*.log, /var/log/containers/*logcopy*.log
+      path /var/log/containers/*simulator*.log, /var/log/containers/*agent*.log, /var/log/containers/*logcopy*.log, /var/log/containers/*private-contents*.log
       pos_file "/var/log/fluentd-containers.log.pos"
       tag "kubernetes.*"
       read_from_head true
