--- a/leaderboard_1.0/config/fluentd.yaml
+++ b/leaderboard_1.0/config/fluentd.yaml
@@ -99,11 +99,11 @@ spec:
         image: fluent/fluentd-kubernetes-daemonset:v1.16.1-debian-cloudwatch-1.2
         env:
           - name: K8S_NODE_NAME
-            value: beta-leaderboard-10
+            value: leaderboard-10
           - name: AWS_REGION
             value: us-west-2
           - name: LOG_GROUP_NAME
-            value: leaderboard-10-tests
+            value: leaderboard-10
         resources:
           limits:
             memory: 200Mi
